--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -7,10 +7,11 @@
     android:layout_height="wrap_content"
     android:background="@drawable/csgo_bg"
     android:orientation="vertical"
-    android:layout_margin="15dp"
+    android:layout_margin="75dp"
     android:padding="50dp">
 
     <ProgressBar
+        android:background="@drawable/box_bg"
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
