--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -4,296 +4,257 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:layout_width="fill_parent"
-    android:background="@drawable/csgo_bg"
+    android:background="@drawable/box_bg2"
     android:layout_height="fill_parent">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="center"
     android:gravity="center_horizontal"
 
     tools:context=".MainActivity">
 
 
-
-
-    <ImageView
+    <LinearLayout
         android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="10dp"
-        app:srcCompat="@drawable/banner"/>
-
-    <LinearLayout
-        android:id="@+id/this_week"
-        android:layout_below="@+id/ticket_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/box_bg"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:gravity="center">
-
-
-        <TextView
-            android:id="@+id/text_header_week"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="This week:"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-
-        <TextView
-            android:id="@+id/text_price_week"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="monospace"
-            android:paddingLeft="25dp"
-            android:text="Price: "
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-
-        <ImageView
-            android:id="@+id/image_week_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="150dp"/>
-
-        <TextView
-            android:id="@+id/text_total_ticket_week"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="monospace"
-            android:paddingLeft="25dp"
-            android:text=""
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/text_winner_week"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingLeft="25dp"
-            android:text=""
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:gravity="center">
-
-            <Button
-                android:id="@+id/btn_change_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Last week" />
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ticket_layout"
-        android:layout_below="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/box_bg"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:gravity="center">
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
 
         <ImageView
-            android:id="@+id/btn_info"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/info"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:clickable="true"
-            />
-
-        <Space
-            android:layout_width="1dp"
-            android:layout_height="0dp"
-            android:layout_weight="3"/>
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/text_header_privat"
+            android:id="@+id/logopic1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Weekly tickets:"
-            android:textSize="18sp" />
+            android:src="@drawable/logoskins4free"/>
 
-        <Space
-            android:layout_width="1dp"
-            android:layout_height="0dp"
-            android:layout_weight="3"/>
 
         <ImageView
-            android:id="@+id/btn_steamlink"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/gear"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:clickable="true"
-            />
+            android:id="@+id/logopic2"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:src="@drawable/logotrans"/>
+
+
 
     </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/text_tickets_privat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="0"
-            android:textSize="24sp" />
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:id="@+id/menudiv"
+        android:layout_below="@id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/btn_this_week"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alegreya_sc_black"
+            android:text="This week"
+            android:clickable="true"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:background="@drawable/box_bg"
+            android:textSize="22sp" />
+
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/btn_last_week"
+            android:layout_width="wrap_content"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:fontFamily="@font/alegreya_sc_black"
+            android:text="Next week"
+            android:clickable="true"
+            android:textSize="22sp" />
+
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/btn_future_week"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:fontFamily="@font/alegreya_sc_black"
+            android:text=" Future"
+            android:clickable="true"
+            android:textSize="22sp" />
+
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:id="@+id/text_week"
+        android:layout_below="@id/menudiv"
+        android:textSize="22sp"
+        android:textColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/alegreya_sc_black"
+        android:text="This week"/>
+
+
+
+    <LinearLayout
+        android:layout_below="@+id/text_week"
+        android:id="@+id/ticket_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/box_bg"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="5dp"
+        android:gravity="center">
 
 
         <LinearLayout
-            android:background="@drawable/frame"
+            android:paddingLeft="10dp"
+            android:layout_below="@id/logo"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:padding="2dp"
-            android:gravity="center">
+            android:orientation="vertical">
 
 
-            <ImageView
-                android:id="@+id/day1"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day1"
-                />
-            <ImageView
-                android:id="@+id/day2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day2"
-                />
-            <ImageView
-                android:id="@+id/day3"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day3"
-                />
-            <ImageView
-                android:id="@+id/day4"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day4"
-                />
-            <ImageView
-                android:id="@+id/day5"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day5"
-                />
-            <ImageView
-                android:id="@+id/day6"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day6"
-                />
-            <ImageView
-                android:id="@+id/day7"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/day7"
-                />
-
-                <TextView
-                    android:id="@+id/extra"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="5dp"
-                    android:text="Extra: 0"
-                    android:gravity="center_horizontal"/>
+            <TextView
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/alegreya_sc_black"
+                android:text="Prize: "/>
 
 
+            <TextView
+                android:id="@+id/text_prize_gun_type"
+                android:textSize="22sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/alegreya_sc_black"
+                android:text="Desert Eagle"/>
 
+
+            <TextView
+                android:id="@+id/text_prize_skin_type"
+                android:textSize="22sp"
+                android:textColor="@color/green"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/alegreya_sc_black"
+                android:text="Code Red (BS)"/>
 
         </LinearLayout>
 
 
 
-
-
-        <Button
-            android:id="@+id/btn_claim_ticket"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/claim_ticket"
-            android:layout_weight="3"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"/>
-
-        <Button
-            android:id="@+id/btn_claim_limit_ticket"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:text="@string/claim_limit_ticket"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"/>
-
-    </LinearLayout>
-
-    <!--
-    <LinearLayout
-        android:id="@+id/extra_content"
-        android:layout_below="@+id/ticket_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/box_bg"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btn_join_quiz"
+        <ImageView
+            android:id="@+id/image_week_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_quiz_string"
-            android:layout_marginBottom="10dp"/>
-
+            android:layout_weight="1"
+            android:minHeight="100dp"/>
 
 
     </LinearLayout>
-    -->
+
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:id="@+id/Tickets"
+        android:layout_below="@id/ticket_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <TextView
+            android:gravity="center_horizontal"
+            android:textSize="22sp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alegreya_sc_black"
+            android:text="Tickets claimed :  "/>
+
+
+        <TextView
+            android:textSize="22sp"
+            android:textColor="@color/green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alegreya_sc_black"
+            android:text="0"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/claimdiv"
+        android:layout_below="@id/Tickets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+    <Button
+        android:textSize="22dp"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="65dp"
+        android:minWidth="220dp"
+        android:fontFamily="@font/alegreya_sc_black"
+        android:text="Claim ticket" />
+
+    </LinearLayout>
+
+
+    <Space
+        android:layout_below="@id/claimdiv"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="?android:attr/windowBackground"
+        app:itemBackground="@color/greyish"
+        app:itemIconTint="@color/green"
+        app:itemTextColor="@color/green"
+        app:menu="@menu/menu_nav"/>
+
+
 
 
 </RelativeLayout>
