--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whiteish">#90FFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="green">#03a752</color>
     <color name="greyish">#0f111d</color>
