--- a/app/src/main/res/layout/activity_ref.xml
+++ b/app/src/main/res/layout/activity_ref.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:layout_width="fill_parent"
-    android:background="@drawable/csgo_bg"
+    android:background="@drawable/box_bg2"
     android:layout_height="fill_parent">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,12 +17,30 @@
 
 
 
-        <ImageView
+        <LinearLayout
             android:id="@+id/logo"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            app:srcCompat="@drawable/banner"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/logopic1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logoskins4free"/>
+
+
+            <ImageView
+                android:layout_marginTop="5dp"
+                android:id="@+id/logopic2"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:src="@drawable/logotrans"/>
+
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/this_week"
@@ -49,7 +67,7 @@
 
 
             <EditText
-                    android:id="@+id/edittext_settings_discordname"
+                    android:id="@+id/edittext_ref_code_input"
                     android:layout_width="wrap_content"
                     android:layout_weight="10"
                     android:layout_marginRight="10dp"
@@ -60,7 +78,7 @@
 
 
                 <Button
-                    android:id="@+id/ref_btn_save_refcode"
+                    android:id="@+id/ref_btn_save_refcode_input"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
