--- a/app/src/main/res/layout/activity_ref.xml
+++ b/app/src/main/res/layout/activity_ref.xml
@@ -86,7 +86,36 @@
 
             </LinearLayout>
 
-            <ListView
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/Tickets"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:gravity="center_horizontal"
+                    android:textSize="22sp"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/alegreya_sc_black"
+                    android:text="Referrals :  "/>
+
+
+                <TextView
+                    android:id="@+id/text_referrals_amount"
+                    android:textSize="22sp"
+                    android:textColor="@color/green"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/alegreya_sc_black"
+                    android:text="0"/>
+
+            </LinearLayout>
+
+        <ListView
                 android:id="@+id/ref_listview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
