--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/box_bg"
+        android:background="@drawable/shadowbox"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
@@ -106,18 +106,27 @@
         android:layout_below="@+id/settings_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginTop="25dp"
         android:gravity="center">
 
-    <android.widget.Button
-        android:id="@+id/btn_settings_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shadowbox"
-        android:textColor="#FFFFFF"
-        android:text="Save" />
+        <android.widget.Button
+            android:id="@+id/btn_back"
+            android:layout_marginRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shadowbox"
+            android:textColor="#FFFFFF"
+            android:text="Back" />
 
+        <android.widget.Button
+            android:id="@+id/btn_settings_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shadowbox"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"
+            android:text="Save" />
     </LinearLayout>
 
 </RelativeLayout>
