--- a/app/src/main/res/layout/activity_ref.xml
+++ b/app/src/main/res/layout/activity_ref.xml
@@ -35,16 +35,29 @@
                 android:layout_marginTop="5dp"
                 android:id="@+id/logopic2"
                 android:layout_width="wrap_content"
-                android:layout_height="80dp"
+                android:layout_height="90dp"
                 android:src="@drawable/logotrans"/>
 
 
 
         </LinearLayout>
 
+
+        <android.widget.Button
+            android:layout_marginLeft="30dp"
+            android:layout_below="@id/logo"
+            android:id="@+id/btn_back2"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:background="@drawable/shadowbox"
+            android:fontFamily="@font/alegreya_sc_black"
+            android:text="Back"
+            android:textColor="#FFFFFF"
+            android:textSize="8sp" />
+
         <LinearLayout
             android:id="@+id/this_week"
-            android:layout_below="@+id/logo"
+            android:layout_below="@+id/btn_back2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
